Package_Tools/cairo/package/cairo.pas


procedure cairo_pattern_set_filter(pattern: Pcairo_pattern_t; filter: Tcairo_filter_t); cdecl; external cairo_lib;
function cairo_pattern_get_filter(pattern: Pcairo_pattern_t): Tcairo_filter_t; cdecl; external cairo_lib;
function cairo_pattern_get_rgba(pattern: Pcairo_pattern_t; red: Pdouble; green: Pdouble; blue: Pdouble; alpha: Pdouble): Tcairo_status_t; cdecl; external cairo_lib;
function cairo_pattern_get_surface(pattern: Pcairo_pattern_t; surface: PPcairo_surface_t): Tcairo_status_t; cdecl; external cairo_lib;
function cairo_pattern_get_color_stop_rgba(pattern: Pcairo_pattern_t; index: longint; offset: Pdouble; red: Pdouble; green: Pdouble; blue: Pdouble; alpha: Pdouble): Tcairo_status_t; cdecl; external cairo_lib;
function cairo_pattern_get_color_stop_count(pattern: Pcairo_pattern_t; Count: Plongint): Tcairo_status_t; cdecl; external cairo_lib;
function cairo_pattern_get_linear_points(pattern: Pcairo_pattern_t; x0: Pdouble; y0: Pdouble; x1: Pdouble; y1: Pdouble): Tcairo_status_t; cdecl; external cairo_lib;
function cairo_pattern_get_radial_circles(pattern: Pcairo_pattern_t; x0: Pdouble; y0: Pdouble; r0: Pdouble; x1: Pdouble; y1: Pdouble; r1: Pdouble): Tcairo_status_t; cdecl; external cairo_lib;
function cairo_mesh_pattern_get_patch_count(pattern: Pcairo_pattern_t; Count: Pdword): Tcairo_status_t; cdecl; external cairo_lib;
function cairo_mesh_pattern_get_path(pattern: Pcairo_pattern_t; patch_num: dword): Pcairo_path_t; cdecl; external cairo_lib;
function cairo_mesh_pattern_get_corner_color_rgba(pattern: Pcairo_pattern_t; patch_num: dword; corner_num: dword; red: Pdouble; green: Pdouble; blue: Pdouble; alpha: Pdouble): Tcairo_status_t; cdecl; external cairo_lib;
function cairo_mesh_pattern_get_control_point(pattern: Pcairo_pattern_t; patch_num: dword; point_num: dword; x: Pdouble; y: Pdouble): Tcairo_status_t; cdecl; external cairo_lib;
procedure cairo_matrix_init(matrix: Pcairo_matrix_t; xx: Tdouble; yx: Tdouble; xy: Tdouble; yy: Tdouble; x0: Tdouble; y0: Tdouble); cdecl; external cairo_lib;
procedure cairo_matrix_init_identity(matrix: Pcairo_matrix_t); cdecl; external cairo_lib;
procedure cairo_matrix_init_translate(matrix: Pcairo_matrix_t; tx: Tdouble; ty: Tdouble); cdecl; external cairo_lib;
procedure cairo_matrix_init_scale(matrix: Pcairo_matrix_t; sx: Tdouble; sy: Tdouble); cdecl; external cairo_lib;
procedure cairo_matrix_init_rotate(matrix: Pcairo_matrix_t; radians: Tdouble); cdecl; external cairo_lib;
procedure cairo_matrix_translate(matrix: Pcairo_matrix_t; tx: Tdouble; ty: Tdouble); cdecl; external cairo_lib;
procedure cairo_matrix_scale(matrix: Pcairo_matrix_t; sx: Tdouble; sy: Tdouble); cdecl; external cairo_lib;
procedure cairo_matrix_rotate(matrix: Pcairo_matrix_t; radians: Tdouble); cdecl; external cairo_lib;
function cairo_matrix_invert(matrix: Pcairo_matrix_t): Tcairo_status_t; cdecl; external cairo_lib;
procedure cairo_matrix_multiply(Result: Pcairo_matrix_t; a: Pcairo_matrix_t; b: Pcairo_matrix_t); cdecl; external cairo_lib;
procedure cairo_matrix_transform_distance(matrix: Pcairo_matrix_t; dx: Pdouble; dy: Pdouble); cdecl; external cairo_lib;
procedure cairo_matrix_transform_point(matrix: Pcairo_matrix_t; x: Pdouble; y: Pdouble); cdecl; external cairo_lib;

type
  Tcairo_region = Tcairo_region_t;
  Pcairo_region_overlap = ^Tcairo_region_overlap;
  Tcairo_region_overlap = longint;

const
  CAIRO_REGION_OVERLAP_IN = 0;
  CAIRO_REGION_OVERLAP_OUT = 1;
  CAIRO_REGION_OVERLAP_PART = 2;

type
  Tcairo_region_overlap_t = Tcairo_region_overlap;
  Pcairo_region_overlap_t = ^Tcairo_region_overlap_t;

function cairo_region_create: Pcairo_region_t; cdecl; external cairo_lib;
function cairo_region_create_rectangle(rectangle: Pcairo_rectangle_int_t): Pcairo_region_t; cdecl; external cairo_lib;
function cairo_region_create_rectangles(rects: Pcairo_rectangle_int_t; Count: longint): Pcairo_region_t; cdecl; external cairo_lib;
function cairo_region_copy(original: Pcairo_region_t): Pcairo_region_t; cdecl; external cairo_lib;
function cairo_region_reference(region: Pcairo_region_t): Pcairo_region_t; cdecl; external cairo_lib;
procedure cairo_region_destroy(region: Pcairo_region_t); cdecl; external cairo_lib;
function cairo_region_equal(a: Pcairo_region_t; b: Pcairo_region_t): Tcairo_bool_t; cdecl; external cairo_lib;
function cairo_region_status(region: Pcairo_region_t): Tcairo_status_t; cdecl; external cairo_lib;
procedure cairo_region_get_extents(region: Pcairo_region_t; extents: Pcairo_rectangle_int_t); cdecl; external cairo_lib;
function cairo_region_num_rectangles(region: Pcairo_region_t): longint; cdecl; external cairo_lib;
procedure cairo_region_get_rectangle(region: Pcairo_region_t; nth: longint; rectangle: Pcairo_rectangle_int_t); cdecl; external cairo_lib;
function cairo_region_is_empty(region: Pcairo_region_t): Tcairo_bool_t; cdecl; external cairo_lib;
function cairo_region_contains_rectangle(region: Pcairo_region_t; rectangle: Pcairo_rectangle_int_t): Tcairo_region_overlap_t; cdecl; external cairo_lib;
function cairo_region_contains_point(region: Pcairo_region_t; x: longint; y: longint): Tcairo_bool_t; cdecl; external cairo_lib;
procedure cairo_region_translate(region: Pcairo_region_t; dx: longint; dy: longint); cdecl; external cairo_lib;
function cairo_region_subtract(dst: Pcairo_region_t; other: Pcairo_region_t): Tcairo_status_t; cdecl; external cairo_lib;
function cairo_region_subtract_rectangle(dst: Pcairo_region_t; rectangle: Pcairo_rectangle_int_t): Tcairo_status_t; cdecl; external cairo_lib;
function cairo_region_intersect(dst: Pcairo_region_t; other: Pcairo_region_t): Tcairo_status_t; cdecl; external cairo_lib;
function cairo_region_intersect_rectangle(dst: Pcairo_region_t; rectangle: Pcairo_rectangle_int_t): Tcairo_status_t; cdecl; external cairo_lib;
function cairo_region_union(dst: Pcairo_region_t; other: Pcairo_region_t): Tcairo_status_t; cdecl; external cairo_lib;
function cairo_region_union_rectangle(dst: Pcairo_region_t; rectangle: Pcairo_rectangle_int_t): Tcairo_status_t; cdecl; external cairo_lib;
function cairo_region_xor(dst: Pcairo_region_t; other: Pcairo_region_t): Tcairo_status_t; cdecl; external cairo_lib;
function cairo_region_xor_rectangle(dst: Pcairo_region_t; rectangle: Pcairo_rectangle_int_t): Tcairo_status_t; cdecl; external cairo_lib;
procedure cairo_debug_reset_static_data; cdecl; external cairo_lib;

implementation

function CAIRO_VERSION_ENCODE(major, minor, micro: longint): longint;
begin
  CAIRO_VERSION_ENCODE := ((major * 10000) + (minor * 100)) + (micro * 1);
end;
//
//{ was #define dname def_expr }
//function CAIRO_VERSION : longint; { return type might be wrong }
//  begin
//    CAIRO_VERSION:=CAIRO_VERSION_ENCODE(CAIRO_VERSION_MAJOR,CAIRO_VERSION_MINOR,CAIRO_VERSION_MICRO);
//  end;
//
{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }
//function CAIRO_VERSION_STRINGIZE(major,minor,micro : longint) : longint;
//begin
//  CAIRO_VERSION_STRINGIZE:=CAIRO_VERSION_STRINGIZE_(major,minor,micro);
//end;

//{ was #define dname def_expr }
//function CAIRO_VERSION_STRING : longint; { return type might be wrong }
//  begin
//    CAIRO_VERSION_STRING:=CAIRO_VERSION_STRINGIZE(CAIRO_VERSION_MAJOR,CAIRO_VERSION_MINOR,CAIRO_VERSION_MICRO);
//  end;


end.
